public/css/custom-style.css
/* ... */
.bg-right{
	background-repeat: no-repeat;
	background-position: top right;
}
.sec-bg-02{
	background-repeat: no-repeat;
	background-position: top left;	
	background-size: cover;
}
.sec-bg-03{
	background:url("../img/sec-bg-03.jpg");
	background-repeat: no-repeat;
	background-position: top left;	
	background-size: cover;
}
.sec-bg-04{
	background:url("../img/sec-bg-04.jpg");
	background-repeat: no-repeat;
	background-position: top left;
	background-size: cover;
}
.sec-bg-05{
	background:url("../img/901.jpg");
	background-repeat: repeat;
	background-position: top center;	
	background-size: contain;
}
.sec-bg-04{
	background-color: #fff !important;
}
.parallax{
	background-attachment: fixed!important;
}
/* Kontener dla obrazków */
.grid-container {
	display: grid;
	grid-template-columns: repeat(4, 1fr); /* 4 kolumny o równej szerokości */
	gap: 5px; /* Odstęp między obrazkami */
	margin: 10px;
  }
  
  .grid-item {
	width: 100%;
	height: auto;
  }
  
  .service-block {
	overflow: hidden; /* Aby zapobiec wyciekaniu zawartości */
  }
  
  img.img-fluid {
	width: 100%; /* Ustawienie szerokości obrazka na 100% kontenera */
	height: auto; /* Automatyczna wysokość dla proporcjonalnego skalowania */
	object-fit: cover; /* Wypełnianie kontenera bez zniekształceń */
  }
.a-fb{
	text-decoration: none;
	color: #fff;
}
.a-fb:hover{
	color: #93362e;
}
/* ========== Page Loading Style ========== */
.loaders {
    width: 100%;
    box-sizing: border-box;
    display: flex;
    flex: 0 1 auto;
    flex-direction: row;
    flex-wrap: wrap;
 }
 .loaders .loader {
      box-sizing: border-box;
      display: flex;
      flex: 0 1 auto;
      flex-direction: column;
      flex-grow: 1;
      flex-shrink: 0;
      flex-basis: 25%;
      max-width: 25%;
      height: 200px;
      align-items: center;
      justify-content: center;
  }
  .loader{display: table;
    height: 100%;
    position: fixed;
    width: 100%;
    z-index: 1200;
  }

.loader-bg{
  background: #0F0A06;
}

.loader-inner {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}
/* ========== Top Navigation ========== */
.top-nav {
    height: 80px;
    transition: 0.2s ease-in;
	-webkit-transition: 0.2s ease-in;
	-moz-transition: 0.2s ease-in;
}
.top-nav .navbar-nav li .nav-link {
	position: relative;
	z-index: 9999;
    color: #fff;
    font-size: 18px;
    padding:6px 26px;
    margin:6px 5px 0;
    font-weight: 400;
    text-transform: uppercase;
    transition: 0.2s ease-in;
	-webkit-transition: 0.2s ease-in;
	-moz-transition: 0.2s ease-in;
}
.nav-item{
	width: 140px;
	display: flex;
	align-items: center;
	justify-content: center;
}
.navbar{
	background-color: #0f0a05;
}
.navbar-brand{
	margin-right: 1rem;
	margin-left: 1rem;
}
.navbar-expand-md .navbar-collapse{
	padding-right: 20px; 
}
.margin-right{
	margin-right: 1rem;
}
.margin-left{
	margin-left: 1rem;
}
.top-nav li a.nav-link:hover, .top-nav .nav-item.active a.nav-link{
    color: #fff;
    background-color: #93362e;
	border-color: #93362e;
	border-radius: 50px;
    transition: 0.5s ease-in;
	-webkit-transition: 0.5s ease-in;
	-moz-transition: 0.5s ease-in;
}
.top-nav .navbar-brand{
	font-size: 28px;
	color: #fff;
	font-family: 'Montserrat', sans-serif;
}
.top-nav .search-box li a.nav-link{
	border:1px solid #93362e;
	padding: 6px 15px;
}
#services{
	scroll-margin-top: 120px; /* zmień na wysokość Twojej nawigacji */
	border-bottom: 20px solid #93362e;
}
#about{
	scroll-margin-top: 140px; /* zmień na wysokość Twojej nawigacji */
	background-color: #f8f2ef;
}
#testimonial{
	scroll-margin-top: 120px; /* zmień na wysokość Twojej nawigacji */
}
#galery{
	scroll-margin-top: 120px; /* zmień na wysokość Twojej nawigacji */
	border-bottom: 20px solid #93362e;
}
#contactinfo{
	scroll-margin-top: 120px; /* zmień na wysokość Twojej nawigacji */
	border-bottom: 20px solid #93362e;
}
#lg-prev-14{
	color: #93362e;
}
.home-container{
	display: flex;
	flex-flow: row nowrap;
	position: absolute;
	bottom: 0;
	width: 100%;
	height: 88%;
	border-bottom: 20px solid #93362e;
}
.first-banner-part{
	width: 30%;
	display: flex;
	flex-flow: column nowrap;
	height: 100%;
	background:url("../img/first-banner-part.png");
	background-size: cover;
}
.first-part-position{
	display: flex;
	flex-flow: column nowrap;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: 40%;
	border-bottom: 8px solid white;
}
#price-image{
	position: absolute;
	top: 12rem;
	left: 34rem;
}
#price-image2{
	position: absolute;
	top: 1.5rem;
}
.first-part-position h1{
	font-size: 34px !important;
	color: #fff;
	text-align: center;
}
.first-part-position p{
	color: #93362e;
	text-align: center;
}
.second-part-position{
	display: flex;
	justify-content: center;
	align-items: flex-end;
	padding-bottom: 4rem;
	width: 100%;
	height: 60%;
}
.second-banner-part{
	width: 70%;
	height: 100%;
	background-color: white;
}
.top-nav.light-header{
	height: 140px;
	background: #0f0a05 !important;
	box-shadow: 0 0 10px rgba(0,0,0,0.23);
	transition: 0.5s ease-in;
	-webkit-transition: 0.5s ease-in;
	-moz-transition: 0.5s ease-in;
	z-index: 1000;
}
#contactinfo:before {
	background: #0f0a05!important;
}
.top-nav.light-header .navbar-brand{
	color: #fff;
}

.top-nav.light-header .search-box li a.nav-link{
	padding: 6px 15px;
	border:1px solid #fff;
}
.top-nav.light-header .search-box li a.nav-link i{
	color:#fff!important;
}

/* ========== Intro Header ========== */
.intro{
	float: left;
	width:100%;
	display: flex;
	align-items:center;
	height:95%;
	position: relative;
	z-index: 1;
}
.intro.intro-small{
	height: 60%;
}
.intro-bg{
	background:url("../img/banner.png");
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
}
.caption-container{
	width:50rem;
	margin:0 auto;
}
.caption-two-panel{
	display: flex;
	align-items:center;
}
.intro h1{
	font-weight: 700;
	font-family: 'Abril Fatface',;
	font-size: 3.8rem;
}
.intro-caption .btn i{
	float: left;
	margin-right:15px;
}
/* ... */

